Updated Formatting Circuit Chapter - One Picture

--- a/Circuits.html
+++ b/Circuits.html
@@ -45,13 +45,16 @@
 	</div>
 	</div>
 </div>
+<h2>Circuits and Circuit Elements</h2>
 <p>A <span class="vocabColor">circuit</span> is the interconnection of electrical devices in a circular path. To power the circuit, voltage is generated from a power source and moves through the wires and components. <span class="vocabColor">Voltage</span> is the total work per unit charge associated with the motion of charge between two points. The rate at which the electrical charge is flowing through a wire or conductor is called <span class="vocabColor">current</span>. Both current and voltage are required to achieve electrical power. </p>
+
+	<center><img src="Circuit_Pictures/picture1.png"  height="150px" /></center>
 	
 <p> <span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor">resistor</span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level. </p>
 
 <p>Resistance and current can be used to determine voltage with Ohm’s law. Ohm’s law is the most important equation for basic circuitry. </p>
 	
-<p>More Vocab:</p>
+<p><h2>More Vocab:</h2></p>
 <p><span class="vocabColor">Node</span>: A point in a circuit where two or more components are connected </p>
 <p><span class="vocabColor">Loop</span>: An ordered sequence of nodes forming a closed path </p>
 
