--- a/Circuits.html
+++ b/Circuits.html
@@ -48,22 +48,51 @@
 <h2>Circuits and Circuit Elements</h2>
 <p>A <span class="vocabColor">circuit</span> is the interconnection of electrical devices in a circular path. To power the circuit, voltage is generated from a power source and moves through the wires and components. <span class="vocabColor">Voltage</span> is the total work per unit charge associated with the motion of charge between two points. The rate at which the electrical charge is flowing through a wire or conductor is called <span class="vocabColor">current</span>. Both current and voltage are required to achieve electrical power. </p>
 
-	<center><img src="Circuit_Pictures/picture1.png"  height="150px" /></center>
+	<center><img src="Circuit_Pictures/Power.png" HEIGHT="150px" /></center>
 	
-<p> <span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor">resistor</span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level. </p>
-
+<p> <img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" <span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor">resistor</span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level. </p>
+	<center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
 <p>Resistance and current can be used to determine voltage with Ohm’s law. Ohm’s law is the most important equation for basic circuitry. </p>
+	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center>
+<p>That equation can then be substituted into the Power equation from before. </p>
+	<center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="60px" /></center>
 	
 <p><h2>More Vocab:</h2></p>
 <p><span class="vocabColor">Node</span>: A point in a circuit where two or more components are connected </p>
 <p><span class="vocabColor">Loop</span>: An ordered sequence of nodes forming a closed path </p>
 
+<p><h2>Parallel and Series Resistors</h2></p>
+
 <p>Solving a circuit requires simplifying by combining similar elements. In order to for a circuit with multiple resistors to be solved, the resistors must first be simplified into one total, equivalent resistance. The first step to simplifying resistance is determining whether the resistors are in series or parallel. </p>
 	
 <p>Two elements are in <span class="vocabColor">series</span> if they share a node with no other elements connected at the node. Resistors in series add together to get an equivalent resistance. In the figure below, resistors A and B are in series. Two elements are in <span class="vocabColor">parallel</span> if they form a loop with no other elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. In the figure below, resistors C and D are in parallel. </p>
 
+<center><img src="Circuit_Pictures/Parallel_Series.png" HEIGHT="100px" /></center>
+
+<p>Here's an example:</p>
+<center>
+<align="left"><img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /></align>
+<align="right"><img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" /></align>
+</center>
+
+<p>First, recognize the series and parallel resistors in this circuit. Start by reducing resistors A and B into an equivalent resistance:</p>
+<center><img src="Circuit_Pictures/RAB.png"  HEIGHT="50px" /></center>
+<p>Next, reduce the parallel resistors C and D:</p>
+<center><img src="Circuit_Pictures/RCD.png"  HEIGHT="100px" /></center>
+<p>Third, reduce series resistors E, F and G:</p>
+<center><img src="Circuit_Pictures/REFG.png"  HEIGHT="50px" /></center>
+<p>The new configuration would look like this:
+<center><img src="Circuit_Pictures/Simplified.png"  HEIGHT="150px" /></center>
+<p>Now, solve RCD and REFG which are in parallel:</p>
+<center><img src="Circuit_Pictures/RCG.png"  HEIGHT="75px" /></center>
+<p>Finally, solve the equation by adding the equivalent resistances since they are in series:</p>
+<center><img src="Circuit_Pictures/RTotal.png"  HEIGHT="50px" /></center>
+<p></p>
+
+<h2>Explanation of Series and Parallel</h2>
 <p>Why do series resistors simply add together while parallel ones are so much more different? The reasoning lies in how the current moves through the circuit. When resistors are in series current is able to flow through all of the resistors in a single loop. So the equivalent resistance of series resistors has to be larger than the largest resistor in the circuit. However when resistors are in parallel the current has to split between the loops created by the parallel resistors. This means that the equivalent resistance will always be smaller than the smallest resistor in the loop. It is important to note that when current flows through a loop of parallel resistors, it splits in a way that is proportional to the resistance of the resistors; higher resistors will have less current flowing through them and vice versa to ensure that there is the same amount of voltage going through the entire circuit. </p>
 
+<p><h2>Kirchoff's Voltage and Current Laws</h2></p>
 <p><span class="vocabColor">Kirchoff’s Voltage Law (KVL)</span> says that the algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the voltages, paying attention to the polarity of the voltage sources. </p>
 
 <p><span class="vocabColor">Kirchoff’s Current Law (KCL</span> says that the algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum of all the currents leaving a node should be subtracted from all currents entering that same node with any unknown values left as variables.
