--- a/Programming.html
+++ b/Programming.html
@@ -40,11 +40,65 @@
 <div class="jumbotron">
 	<div class="row">
 	<div class="col-md-8">
-		<h1>RBE 1001 E-Textbook</h1>
-		<p>This is the website for the e-textbook</p>
+		<h1>Programming</h1>
+		<p>Introduction to Programming in C and Arduino</p>
 	</div>
 	</div>
 </div>
+<h2>Constants and Variables</h2>
+<p>Constants are values in a program that cannot change throughout a program’s execution. When a constant is defined, a program essentially just sees the constant and pastes the defined value into the function instead. Constants can be initialized using pound-define (#define) and are usually declared in all capital letters. Variables are locations in memory for storing values and can change over time. All variables have a type (int, long, char, etc.) and a visibility: global or local. Further, variables in certain instances can be static.</p>
+
+<p> Type refers to what can be stored in a variable; different types can hold different values. For example, an int can hold two bytes (or values from -32,768 to 32,767) while a char can hold one byte (or values from 0-255). For this reason, ints are usually used for numbers while chars are usually used for alphanumeric symbols.</p>
+
+<p>Visibility refers to where or how the variable is declared; the two kinds of visibility are global and local. Global variables are declared at the top of a program and are accessible throughout the entire program and all related functions. Local variables are defined inside a certain function, state, or other small part of a program and are not accessible beyond the outer limits of whatever they are declared in. </p>
+
+<p>Static variables do not change between invocations in the program in which they are used; they are similar to global variables in that way. Static variables can only be manipulated or used in the function in which they are declared, but they do not lose their value between multiple function calls. </p>
+
+<p>Finally, it is important to remember that variables are case sensitive. The common format for naming a variable is called “camel case” and consists of the first (or only) word in lower case and any additional words beginning with an uppercase letter. Variable names never have spaces; underscores are an acceptable alternative. </p>
+
+<h2>Operators</h2>
+
+<p>Operators are used in programs for the manipulation of data and variables. They are used for arithmetic, bit-wise operations, and comparisons. </p>
+
+<p>Arithmetical operators consist of adding (+), subtracting (-), multiplying (*), dividing (/), and modulo (%). Modulo gives the remainder after a division. For example, having an operation 5%3 would mean to divide 5 by 3 and output the remainder (2). Arithmetical operators can be combined as a sort of short-hand to make programs look cleaner: +=, -=, *=, /=. A short-hand operator can be used with two values where at least one is a variable: for example “a” and 5. The code would be written as “a += 5;” and it means “a” equals the sum of “a” and 5. Therefore, if “a” had been equal to 11 before that line, it would now be equal to 17. Each short-hand operator works much in this way. </p>
+
+<p>Relational operators consist mainly of less than (<), greater than (>), is equal to (==), and not (!). Relational operators “less than” and “greater than” can be combined with “equals” to achieve “less than or equal to” and “greater than or equal to.” “Not” can be combined with any of “less than,” “greater than,” and “equal to.” It is also important to note that when comparing two values to see if they are equal, a program must use two equal signs; using only one equals sign will simply reassign your variable rather than comparing it. </p>
+
+<h3>Examples:</h3>
+
+<h2>If-Statements</h2>
+
+<h3>Syntax</h3>
+
+<p>What are they? If statements are tools that execute other statements if a certain condition is met. If-statements can be stand-alone; this means that they are only looking for one condition and executing in that specific case. They can also be used with an else-statement that serves as a catch-all for every instance when the condition isn’t met. </p>
+
+<h3>Example:</h3>
+
+<p>When a function or program needs to check more than one condition, an else-if can be implemented.</p>
+
+<p>Finally, sometimes there is a need to use an if-statement inside an if-statement. These are effective but not efficient. State machines are the cleaner way to accomplish the same goal. Find more information on state machines here (hyperlink).</p>
+
+<h2>Loops</h2>
+
+<p>Loops are used in programming to allow program statements to repeat a definite or indefinite amount of times.  The two main types of loops are while loops and for loops. </p>
+
+<h3>While-Loops</h3>
+<h4>Syntax:</h4>
+<h4>What Are They?</h4>
+<p>While-loops are a type of loop that continues as long as a Boolean statement is true. The program runs through the loop checking the condition before running through each time. When the condition is found to be false, the loop “breaks” or stops repeating those statements and moves on to the next statement or function in the program. </p>
+<h4>Example</h4>
+
+<h3>For-Loops</h3>
+<h4>Syntax:</h4>
+<h4>What Are They?</h4>
+<p>For-loops are loops that run a specified number of times before moving on to the next part of the code. For-loops have an index variable that simply keeps track of how many times the loop has run and either increments or decrements at the beginning of the loop. After adjusting the index variable, the loop then checks a conditional statement that compares the index to some pre-defined value; as long as the statement is true, the loop will run.</p>
+<h4>Example</h4>
+
+<h3>Break and Continue</h3>
+<p>Break is a tool that can stop a loop at any point, usually given a certain condition. When break is triggered, the program will move to the first lines below the loop and execute them. For example:</p>
+<p>Continue is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top. For example:</p>
+
+
 <!-- CONTENT END -->
 </div>
 
