Messing Around With Pop-ups

--- a/Circuits.html
+++ b/Circuits.html
@@ -45,12 +45,38 @@
 	</div>
 	</div>
 </div>
+<h3>Objectives</h3>
+<p>After this chapter you should be able to:</p>
+<p>		Identify Circuit Components<p>
+<p>		Solve Basic Circuits Using Ohm's Law</p>
+<p>		Create Equivalent Resistances From Parallel and Series Resistors</p>
+<p>		Solve Basic Circuits Using KVL and KCL</p>
+
+<SCRIPT TYPE="text/javascript">
+<!--
+function popup(mylink, windowname)
+{
+if (! window.focus)return true;
+var href;
+if (typeof(mylink) == 'string')
+   href=mylink;
+else
+   href=mylink.href;
+window.open(href, windowname, 'width=400,height=200,scrollbars=yes');
+return false;
+}
+//-->
+</SCRIPT>
+
 <h2>Circuits and Circuit Elements</h2>
-<p>A <span class="vocabColor">circuit</span> is the interconnection of electrical devices in a circular path. To power the circuit, voltage is generated from a power source and moves through the wires and components. <span class="vocabColor">Voltage</span> is the total work per unit charge associated with the motion of charge between two points. The rate at which the electrical charge is flowing through a wire or conductor is called <span class="vocabColor">current</span>. Both current and voltage are required to achieve electrical power. </p>
+<p>A <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">circuit</A></span> is the interconnection of electrical devices in a circular path. To power the circuit, voltage is generated from a power source and moves through the wires and components. <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Voltage</A></span> is the total work per unit charge associated with the motion of charge between two points. The rate at which the electrical charge is flowing through a wire or conductor is called <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">current</A></span>. Both current and voltage are required to achieve electrical power. </p>
 
 	<center><img src="Circuit_Pictures/Power.png" HEIGHT="150px" /></center>
 	
-<p> <img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" <span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor">resistor</span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level. </p>
+<p> <img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" /><span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor">resistor</span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level. </p>
 	<center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
 <p>Resistance and current can be used to determine voltage with Ohm’s law. Ohm’s law is the most important equation for basic circuitry. </p>
 	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center>
