Finished Adding Definititions

--- a/Circuit Vocab.html
+++ b/Circuit Vocab.html
@@ -37,17 +37,18 @@
 <br/>
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
-<p>Circuit: </p>
-<p>Voltage: </p>
-<p>Current: </p>
-<p>Resistance: </p>
-<p>Resistor: </p>
-<p>Node: </p>
-<p>Loop: </p>
-<p>Series: </p>
-<p>Parallel: </p>
-<p>Kirchoff's Voltage Law: </p>
-<p>Kirchoff's Current Law: </p>
+<p>Circuit: The interconnection of electrical devices in a circular path</p>
+<p>Voltage: Total work per unit charge associated with the motion of charge between two points. Measured in Volts(V)</p>
+<p>Current: The rate at which the electrical charge is flowing through a wire or conductor. Measured in Amps (A)</p>
+<p>Resistance: Opposes, or resists, current flowing through that component</p>
+<p>Resistor: Electrical element to induce resistance</p>
+<p>Ohm's Law: Voltage = Current*Resistance (V=IR)</p>
+<p>Node: A point in a circuit where two or more components are connected</p>
+<p>Loop: An ordered sequence of nodes forming a closed path</p>
+<p>Series: Elements that share a node with no other elements connected at the node</p>
+<p>Parallel: Elements that form a loop with no other elements in the loop</p>
+<p>Kirchoff's Voltage Law: The algebraic sum of the voltages around a loop is zero</p>
+<p>Kirchoff's Current Law: The algebraic sum of all the currents entering a node is zero</p>
 <!-- CONTENT END -->
 </div>
 
