Updated Chapter (for MQP)

--- a/Circuits.html
+++ b/Circuits.html
@@ -77,9 +77,11 @@ return false;
    onClick="return popup(this, 'Vocab')">current</A></span>. Both current and voltage are required to achieve electrical power. </p>
 
 	<center><img src="Circuit_Pictures/Power.png" HEIGHT="150px" /></center>
+	<center><span class="captionStyle">Equation 1: Power Relation to Voltage and Current</span></center>
 	
 <p> Some people have trouble conceptualizing electricity because they cannot see it. Try considering the circuit to instead be a system of pipes. Each pipe is essentially a very large wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of high voltage to low voltage. The speed at which water moves through a pipe is the current. The size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the water can flow freely; if the pipe is small, the water flow is much more restricted. Small resistors are basically large pipes, and large resistors are small pipes. </p>
 <center><img src="Circuit_Pictures/WaterResistance.png" HEIGHT="200px" /></center>
+<center><span class="captionStyle">Figure 1: Resistance Related to Water Pipe Analogy</span></center>
 	
 <p>
 <TABLE>
@@ -90,12 +92,20 @@ return false;
    
       <TD ALIGN=CENTER><img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" /></TD>
    </TR>
+   <TR>
+      <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"></TD>
+   
+      <TD WIDTH=10%><center><span class="captionStyle">Figure 2: Typical Resistor</span></center></TD>
+   </TR>
 </TABLE>
  </p>
  
 	<center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
-	
-<p>Resistance and current can be used to determine voltage with Ohm’s law. Ohm’s law is the most important equation for basic circuitry. </p>
+	<center><span class="captionStyle">Table 1: Reference for Calculating Resistor Values</span></center>
+	<br><br>
+<h3>Ohm's Law</h3>	
+<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important equation for basic circuitry. </p>
 
 	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center
 	
