Updated(MQP Use)

--- a/Circuits2.html
+++ b/Circuits2.html
@@ -81,7 +81,7 @@ return false;
 <TD><p> Some people have trouble conceptualizing electricity because they cannot see it. Try considering the circuit to instead be a system of pipes. Each pipe is essentially a very large wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of high voltage to low voltage. The speed at which water moves through a pipe is the current. The size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the water can flow freely; if the pipe is small, the water flow is much more restricted. Small resistors are basically large pipes, and large resistors are small pipes. </p></TD>
 <TD><center><img src="Circuit_Pictures/WaterResistance.png" HEIGHT="200px" /></center></TD>
 </TR>	
-<p>
+</TABLE>
 <TABLE>
    <TR>
       <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
@@ -91,19 +91,21 @@ return false;
       <TD ALIGN=CENTER><img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" /></TD>
    </TR>
 </TABLE>
- </p>
  
-	<center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
+ <center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
 	
-<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important equation for basic circuitry. </p>
+<TABLE>
+<TR>	
+<TD><p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important equation for basic circuitry. </p></TD>
 
-	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center
-	
-<p>That equation can then be substituted into the Power equation from before. </p>
+	<TD><center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center></TD>
+	</TR>
+	<TR>
+<TD><p>That equation can then be substituted into the Power equation from before. </p></TD>
 
-	<center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="60px" /></center>
-	
+	<TD><center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="60px" /></center></TD>
+	</TR>
 <p><h3>More Vocab:</h3></p>
 <p><span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
    onClick="return popup(this, 'Vocab')">Node</A></span>: A point in a circuit where two or more components are connected </p>
