Programming Chapter - More Popups

--- a/Circuits.html
+++ b/Circuits.html
@@ -46,7 +46,7 @@
 	</div>
 </div>
 <h3>Objectives</h3>
-<p>After this chapter you should be able to:</dp
+<p>After this chapter you should be able to:</p>
 <UL>
 <LI>Identify Circuit Components</LI>
 <LI>Solve Basic Circuits Using Ohm's Law</LI>
