Updated Programming Chapter!

--- a/Programming.html
+++ b/Programming.html
@@ -76,7 +76,7 @@ return false;
 
       <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Local&Global.html" 
    onClick="return popup(this, 'Local and Global Variables')"><center><img src="Programming_Popups/Programming_Pictures/Local&Global.png"  HEIGHT="400px" /img></center></A>
-   <center><span class="captionStyle">Figure 1: Local and Global Variables</span></center>
+   <center><span class="captionStyle">Local and Global Variables</span></center>
 <br><br>
 
 <p> Type refers to what can be stored in a variable; different types can hold different values. For example, an int can hold two bytes (or values from -32,768 to 32,767) while a char can hold one byte (or values from 0-255). For this reason, ints are usually used for numbers while chars are usually used for alphanumeric symbols.</p>
@@ -93,7 +93,7 @@ return false;
    </TR>
    <TR>
    <TD> </TD>
-   <TD ALIGN=CENTER><span class="captionStyle">Figure 2: Arduino Error with Local Variables </span></TD>
+   <TD ALIGN=CENTER><span class="captionStyle">Arduino Error with Local Variables </span></TD>
    </TD>
 </TABLE>
 <br>
@@ -107,7 +107,7 @@ return false;
 	<TD WIDTH=100% ALIGN=LEFT> <img src="Programming_Pictures/StaticOutput.png" HEIGHT="300x" /img> </TD>
 </TR>
 </TABLE>
-<center><span class="captionStyle">Static Variables and Serial Output</span>
+<center><span class="captionStyle">Static Variables and Serial Output</span></center>
 <br><br>
 
 <p>Finally, it is important to remember that variables are case sensitive. The common format for naming a variable is called “camel case” and consists of the first (or only) word in lower case and any additional words beginning with an uppercase letter. Variable names never have spaces; underscores are an acceptable alternative. </p>
@@ -120,10 +120,12 @@ return false;
 <br><br>
 	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Arithmetic.html" 
    onClick="return popup(this, 'Arithmetical Operators')"><center><img src="Programming_Popups/Programming_Pictures/Arithmetic.png" HEIGHT="400" /img></center></A>
+   <center><span class="captionStyle">Arithmetic Operators</span></center>
 <br><br>
 <p>Relational operators consist mainly of less than (<), greater than (>), is equal to (==), and not (!). Relational operators “less than” and “greater than” can be combined with “equals” to achieve “less than or equal to” and “greater than or equal to.” “Not” can be combined with any of “less than,” “greater than,” and “equal to.” It is also important to note that when comparing two values to see if they are equal, a program must use two equal signs; using only one equals sign will simply reassign your variable rather than comparing it. </p>
 	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Relational.html" 
    onClick="return popup(this, 'Relational Operators')"><center><img src="Programming_Popups/Programming_Pictures/Relational.png" HEIGHT="400px" /img></center></A>
+   <center><span class="captionStyle">Relational Operators</span></center>
 <br><br>
 
 <h2>Logic</h2>
@@ -139,11 +141,13 @@ return false;
 <h4>Example:</h4>
 <center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfExample.html" 
    onClick="return popup(this, 'If-Statement Example')"><img src="Programming_Popups/Programming_Pictures/IfExample.png" HEIGHT="400px" /img></A></center>
+   <center><span class="captionStyle">Example Using If-Statement in Arduino</span></center>
    <center><p> What will this code print? Click on it for the answer</p></center>
 <br>
 <p>When a function or program needs to check more than one condition, an else-if can be implemented.</p>
 <center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
    onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/elseIf.png" HEIGHT="200px" /img></A></center>
+   <center><span class="captionStyle">If Statement Using elseIf in Arduino</span></center>
 <p>Finally, sometimes there is a need to use an if-statement inside an if-statement. These are effective but not efficient. State machines are the cleaner way to accomplish the same goal. Find more information on state machines <A HREF="users.wpi.edu/~RBE1001book/StateMachines">here</A></p>
 
 <h2>Loops</h2>
@@ -160,6 +164,7 @@ return false;
 <h4>Example</h4>
 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
    onClick="return popup(this, 'While-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/WhileExample.png" HEIGHT="400px" /img></center></A>
+   <center><span class="captionStyle">Example of While-Loop Using Arduino</span></center>
    <center><p>Click on program to see how variable values will change</p>
    <p>Note: Print statements have been removed from this code for clarity</p></center>
 <br>
@@ -172,7 +177,7 @@ return false;
 <h4>Example</h4>
 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
    onClick="return popup(this, 'For-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/ForExample.png" HEIGHT="400px" /img></center></A>
-  
+	<center><span class="captionStyle">Example of For-Loop Using Arduino</span></center>
    <center><p>What will this code print? Click on it for the answer</p></center>
 
 <h3>Break and Continue</h3>
@@ -182,6 +187,7 @@ return false;
    <br>
    <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/BreakExample.png" HEIGHT="400px" /img></center></A>
+   <center><span class="captionStyle">Using Break with Arduino</span></center>
    <br><br>
 <p>Continue is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top. For example:</p>
 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
@@ -189,6 +195,7 @@ return false;
    <br>
    <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/Continue.png" HEIGHT="400px" /img></center></A>
+   <center><span class="captionStyle">Using Continue in Arduino</span></center>
 
 <!-- CONTENT END -->
 </div>
