Programming - Broken Into Sections

--- a/VariablesAndOperators.html
+++ b/VariablesAndOperators.html
@@ -112,14 +112,15 @@ return false;
 <p>Arithmetical operators consist of adding (+), subtracting (-), multiplying (*), dividing (/), and modulo (%). Modulo gives the remainder after a division. For example, having an operation 5%3 would mean to divide 5 by 3 and output the remainder (2). Arithmetical operators can be combined as a sort of short-hand to make programs look cleaner: +=, -=, *=, /=. A short-hand operator can be used with two values where at least one is a variable: for example “a” and 5. The code would be written as “a += 5;” and it means “a” equals the sum of “a” and 5. Therefore, if “a” had been equal to 11 before that line, it would now be equal to 17. Each short-hand operator works much in this way. </p>
 <br><br>
 	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Arithmetic.html" 
-   onClick="return popup(this, 'Arithmetical Operators')"><center><img src="Programming_Popups/Programming_Pictures/Arithmetic.png" HEIGHT="300px" /img></center></A>
+   onClick="return popup(this, 'Arithmetical Operators')"><center><img src="Programming_Popups/Programming_Pictures/Arithmetic.png" HEIGHT="400" /img></center></A>
+   <center><span class="captionStyle">Arithmetic Operators</span></center>
 <br><br>
 <p>Relational operators consist mainly of less than (<), greater than (>), is equal to (==), and not (!). Relational operators “less than” and “greater than” can be combined with “equals” to achieve “less than or equal to” and “greater than or equal to.” “Not” can be combined with any of “less than,” “greater than,” and “equal to.” It is also important to note that when comparing two values to see if they are equal, a program must use two equal signs; using only one equals sign will simply reassign your variable rather than comparing it. </p>
 	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Relational.html" 
-   onClick="return popup(this, 'Relational Operators')"><center><img src="Programming_Popups/Programming_Pictures/Relational.png" HEIGHT="300px" /img></center></A>
+   onClick="return popup(this, 'Relational Operators')"><center><img src="Programming_Popups/Programming_Pictures/Relational.png" HEIGHT="400px" /img></center></A>
+   <center><span class="captionStyle">Relational Operators</span></center>
 <br><br>
-
-<h3>Operator Examples:</h3>
+<h3><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/LogicAndLoops.html">To see more on Logic and Loops in C-Programming, click here!</A></h3>
 
 
 <!-- CONTENT END -->
