Programming Chapter Tentatively Finished

--- a/Programming.html
+++ b/Programming.html
@@ -147,7 +147,7 @@ return false;
 <p>When a function or program needs to check more than one condition, an else-if can be implemented.</p>
 <center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
    onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/elseIf.png" HEIGHT="200px" /img></A></center>
-   <center><span class="captionStyle">If Statement Using elseIf in Arduino</span></center>
+   <center><span class="captionStyle">If Statement Using "else if" in Arduino</span></center>
 <p>Finally, sometimes there is a need to use an if-statement inside an if-statement. These are effective but not efficient. State machines are the cleaner way to accomplish the same goal. Find more information on state machines <A HREF="users.wpi.edu/~RBE1001book/StateMachines">here</A></p>
 
 <h2>Loops</h2>
